--- a/typeScriptAlgos/realScenarios/package.json
+++ b/typeScriptAlgos/realScenarios/package.json
@@ -4,7 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev --poll ./Driver.ts"
+    "start": "ts-node-dev --poll ./src/Driver.ts",
+    "test": "jest --watchAll --no-cache"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node"
   },
   "keywords": [],
   "author": "",
@@ -12,5 +17,12 @@
   "dependencies": {
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.2"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.0",
+    "@types/mocha": "^10.0.1",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1"
   }
 }
