--- a/typeScriptAlgos/realScenarios/package.json
+++ b/typeScriptAlgos/realScenarios/package.json
@@ -9,18 +9,23 @@
   },
   "jest": {
     "preset": "ts-jest",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "global": {
+      "ts-jest": {
+        "tsconfig": "tsconfig.json"
+      }
+    }
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.0.2"
   },
   "devDependencies": {
     "@types/jest": "^29.5.0",
-    "@types/mocha": "^10.0.1",
     "jest": "^29.5.0",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1"
