--- a/typeScriptAlgos/Tree/package.json
+++ b/typeScriptAlgos/Tree/package.json
@@ -4,23 +4,30 @@
   "description": "",
   "main": "driver.js",
   "scripts": {
-    "start:build": "tsc -w",
-    "start:run": "nodemon build/driver.js",
-    "start": "concurrently npm:start:*"
+    "start": "ts-node-dev --poll ./src/driver.ts",
+    "test": "jest --watchAll --no-cache"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "global": {
+      "ts-jest": {
+        "tsconfig": "tsconfig.json"
+      }
+    }
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/concurrently": "^7.0.0",
-    "@types/nodemon": "^1.19.2",
-    "concurrently": "^7.6.0",
-    "nodemon": "^2.0.21"
+    "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.0.2"
   },
   "devDependencies": {
-    "@babel/preset-typescript": "^7.21.0",
-    "@types/jest": "^29.4.0",
+    "@types/jest": "^29.5.0",
     "jest": "^29.5.0",
-    "ts-jest": "^29.0.5"
+    "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1"
   }
 }
