--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,13 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "type": "java",
+      "name": "Main",
+      "request": "launch",
+      "mainClass": "Main",
+      "projectName": "algorithms_c7c06739"
+    },
+    {
       "type": "node",
       "request": "launch",
       "name": "Run Backtrack Code",
